--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "check": "pnpm dlx @biomejs/biome check ./",
+    "format": "pnpm dlx @biomejs/biome format ./ --write",
+    "lint": "turbo run lint"
   },
   "devDependencies": {
-    "eslint": "^8.48.0",
-    "prettier": "^3.0.3",
+    "@biomejs/biome": "1.2.2",
     "tsconfig": "workspace:*",
     "turbo": "latest"
   },
