--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,4 @@
 {
-	"[javascript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[javascriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[typescript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[typescriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	}
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.formatOnSave": true
 }
