--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.8-alpine as base
+FROM node:18.18 as base
 
 FROM base as builder
 
@@ -6,8 +6,9 @@ WORKDIR /home/node/app
 COPY package*.json ./
 
 COPY . .
-RUN yarn install
-RUN yarn build
+RUN npm install -g pnpm
+RUN pnpm install
+RUN pnpm build
 
 FROM base as runtime
 
@@ -17,7 +18,8 @@ ENV PAYLOAD_CONFIG_PATH=dist/payload.config.js
 WORKDIR /home/node/app
 COPY package*.json  ./
 
-RUN yarn install --production
+RUN npm install -g pnpm
+RUN pnpm install --production
 COPY --from=builder /home/node/app/dist ./dist
 COPY --from=builder /home/node/app/build ./build
 
